--- a/css/cultura.css
+++ b/css/cultura.css
@@ -33,172 +33,153 @@ html
 	z-index: 1;
 	width: 380px;
 	min-height: 450px;
-	background-image: none;
+	background: #D9D9D9 url("../images/u183-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, color-stop(30%, #F4F1F1),to(#D9D9D9));
+	background: -webkit-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -moz-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -ms-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -o-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: linear-gradient(to bottom,#F4F1F1 30%,#D9D9D9 );
 	border-style: none;
 	border-color: #000000;
-	background-color: #292929;
 }
 
-#page_position_content
+#u704
 {
-	margin-top: -1px;
+	z-index: 2;
+	width: 379px;
 }
 
 #u213
 {
-	z-index: 2;
+	z-index: 3;
 	width: 291px;
-	margin-left: 45px;
+	margin-bottom: -1px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 52px;
 }
 
 #u339
 {
-	z-index: 4;
+	z-index: 21;
 	width: 300px;
 	min-height: 400px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
 	margin-left: 40px;
-	margin-top: 11px;
+	margin-top: 10px;
 	position: relative;
 }
 
-#menuu596
+#menuu668
 {
 	z-index: 5;
 	width: 380px;
-	position: relative;
 }
 
-#u625
+#u697
 {
 	width: 125px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 }
 
-#u626
+#u700
 {
 	width: 125px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u626:hover
+#u700:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u629
+#u700:active
+{
+	margin: 0px;
+}
+
+#u701
 {
 	height: 20px;
 	width: 61px;
-	vertical-align: top;
-	background: url("../images/u629.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 33px;
 }
 
-#u626.MuseMenuActive #u629
-{
-	background: url("../images/u629-a.png") no-repeat 0px 0px;
-}
-
-#u597
+#u669
 {
 	width: 125px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 	left: 127px;
 }
 
-#u600
+#u672
 {
 	width: 125px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u600:hover
+#u700.MuseMenuActive,#u672:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u603
+#u672:active
+{
+	margin: 0px;
+}
+
+#u675
 {
 	height: 20px;
 	width: 62px;
-	vertical-align: top;
-	background: url("../images/u603.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 32px;
 }
 
-#u600.MuseMenuActive #u603
-{
-	background: url("../images/u603-a.png") no-repeat 0px 0px;
-}
-
-#u618
+#u676
 {
 	width: 126px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 	left: 254px;
 }
 
-#u621
+#u677
 {
 	width: 126px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u621:hover
+#u672.MuseMenuActive,#u677:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u626:active,#u600:active,#u621:active
+#u677:active
 {
-	background-color: #6B6B6B;
 	margin: 0px;
 }
 
-#u624
+#u677.MuseMenuActive
+{
+	margin: 0px;
+}
+
+#u679
 {
 	height: 20px;
 	width: 86px;
-	vertical-align: top;
-	background: url("../images/u624.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 21px;
-}
-
-#u621.MuseMenuActive #u624
-{
-	background: url("../images/u624-a.png") no-repeat 0px 0px;
-}
-
-.MenuItem /* unifiedNavBar */
-{
-	cursor: pointer;
 }
 
 #page .verticalspacer
