--- a/css/facebook.css
+++ b/css/facebook.css
@@ -33,175 +33,154 @@ html
 	z-index: 1;
 	width: 380px;
 	min-height: 450px;
-	background-image: none;
+	background: #D9D9D9 url("../images/u91-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, color-stop(30%, #F4F1F1),to(#D9D9D9));
+	background: -webkit-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -moz-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -ms-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -o-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: linear-gradient(to bottom,#F4F1F1 30%,#D9D9D9 );
 	border-style: none;
 	border-color: #000000;
-	background-color: #292929;
 }
 
-#page_position_content
+#u704
 {
-	margin-top: -1px;
+	z-index: 2;
+	width: 379px;
 }
 
 #u213
 {
-	z-index: 2;
+	z-index: 3;
 	width: 291px;
-	margin-left: 45px;
+	margin-bottom: -1px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 52px;
 }
 
 #u221
 {
-	z-index: 4;
+	z-index: 21;
 	width: 320px;
 	min-height: 403px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
 	margin-left: 60px;
+	top: -1px;
+	margin-bottom: -1px;
 	position: relative;
 }
 
-#menuu416
+#menuu668
 {
 	z-index: 5;
 	width: 380px;
-	position: relative;
 }
 
-#u445
+#u697
 {
 	width: 125px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 }
 
-#u446
+#u700
 {
 	width: 125px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u446:hover
+#u700:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u449
+#u700:active
+{
+	margin: 0px;
+}
+
+#u701
 {
 	height: 20px;
 	width: 61px;
-	vertical-align: top;
-	background: url("../images/u449.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 33px;
 }
 
-#u446.MuseMenuActive #u449
-{
-	background: url("../images/u449-a.png") no-repeat 0px 0px;
-}
-
-#u417
+#u669
 {
 	width: 125px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 	left: 127px;
 }
 
-#u420
+#u672
 {
 	width: 125px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u420:hover
+#u700.MuseMenuActive,#u672:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u446:active,#u420:active
+#u672:active
 {
-	background-color: #6B6B6B;
 	margin: 0px;
 }
 
-#u423
+#u675
 {
 	height: 20px;
 	width: 62px;
-	vertical-align: top;
-	background: url("../images/u423.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 32px;
 }
 
-#u420.MuseMenuActive #u423
-{
-	background: url("../images/u423-a.png") no-repeat 0px 0px;
-}
-
-#u438
+#u676
 {
 	width: 126px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 	left: 254px;
 }
 
-#u441
+#u677
 {
 	width: 126px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u441.MuseMenuActive
+#u672.MuseMenuActive,#u677:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u444-4
+#u677:active
 {
-	position: relative;
+	margin: 0px;
+}
+
+#u677.MuseMenuActive
+{
+	margin: 0px;
+}
+
+#u679
+{
+	height: 20px;
+	width: 86px;
 	margin-right: -10000px;
 	top: 23px;
 	left: 21px;
-}
-
-#u444-4_clip
-{
-	overflow: hidden;
-	width: 86px;
-	height: 20px;
-	vertical-align: top;
-}
-
-#u444-4_img
-{
-	display: block;
-}
-
-.MenuItem /* unifiedNavBar */
-{
-	cursor: pointer;
 }
 
 #page .verticalspacer
