--- a/css/index.css
+++ b/css/index.css
@@ -33,171 +33,154 @@ html
 	z-index: 1;
 	width: 380px;
 	min-height: 450px;
-	background-image: none;
+	background: #BFB9B9 url("../images/u103-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, color-stop(24%, #FFFFFF),to(#BFB9B9));
+	background: -webkit-linear-gradient(top,#FFFFFF 24%,#BFB9B9 );
+	background: -moz-linear-gradient(top,#FFFFFF 24%,#BFB9B9 );
+	background: -ms-linear-gradient(top,#FFFFFF 24%,#BFB9B9 );
+	background: -o-linear-gradient(top,#FFFFFF 24%,#BFB9B9 );
+	background: linear-gradient(to bottom,#FFFFFF 24%,#BFB9B9 );
 	border-style: none;
 	border-color: #000000;
-	background-color: #292929;
 }
 
-#page_position_content
+#u704
 {
-	margin-top: -1px;
+	z-index: 2;
+	width: 379px;
 }
 
 #u213
 {
-	z-index: 2;
+	z-index: 3;
 	width: 291px;
-	margin-left: 45px;
+	margin-bottom: -1px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 52px;
 }
 
 #u219
 {
-	z-index: 4;
+	z-index: 21;
 	width: 232px;
 	min-height: 219px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
 	margin-left: 74px;
-	margin-top: 52px;
+	margin-top: 51px;
 	position: relative;
 }
 
-#menuu344
+#menuu668
 {
 	z-index: 5;
 	width: 380px;
-	position: relative;
 	margin-top: 37px;
 }
 
-#u373
+#u697
 {
 	width: 125px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 }
 
-#u374
+#u700
 {
 	width: 125px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u377-4
+#u700:hover
 {
-	position: relative;
+	margin: 0px;
+}
+
+#u700:active
+{
+	margin: 0px;
+}
+
+#u701
+{
+	height: 20px;
+	width: 61px;
 	margin-right: -10000px;
 	top: 23px;
 	left: 33px;
 }
 
-#u377-4_clip
-{
-	overflow: hidden;
-	width: 61px;
-	height: 20px;
-	vertical-align: top;
-}
-
-#u377-4_img
-{
-	display: block;
-}
-
-#u345
+#u669
 {
 	width: 125px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 	left: 127px;
 }
 
-#u348
+#u672
 {
 	width: 125px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u374.MuseMenuActive,#u348:hover
+#u700.MuseMenuActive,#u672:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u351
+#u672:active
+{
+	margin: 0px;
+}
+
+#u675
 {
 	height: 20px;
 	width: 62px;
-	vertical-align: top;
-	background: url("../images/u351.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 32px;
 }
 
-#u348.MuseMenuActive #u351
-{
-	background: url("../images/u351-a.png") no-repeat 0px 0px;
-}
-
-#u366
+#u676
 {
 	width: 126px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 	left: 254px;
 }
 
-#u369
+#u677
 {
 	width: 126px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u369:hover
+#u672.MuseMenuActive,#u677:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u348:active,#u369:active
+#u677:active
 {
-	background-color: #6B6B6B;
 	margin: 0px;
 }
 
-#u372
+#u677.MuseMenuActive
+{
+	margin: 0px;
+}
+
+#u679
 {
 	height: 20px;
 	width: 86px;
-	vertical-align: top;
-	background: url("../images/u372.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 21px;
-}
-
-#u369.MuseMenuActive #u372
-{
-	background: url("../images/u372-a.png") no-repeat 0px 0px;
-}
-
-.MenuItem /* unifiedNavBar */
-{
-	cursor: pointer;
 }
 
 #page .verticalspacer
