--- a/css/internazionali.css
+++ b/css/internazionali.css
@@ -33,172 +33,153 @@ html
 	z-index: 1;
 	width: 380px;
 	min-height: 450px;
-	background-image: none;
+	background: #D9D9D9 url("../images/u195-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, color-stop(30%, #F4F1F1),to(#D9D9D9));
+	background: -webkit-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -moz-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -ms-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -o-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: linear-gradient(to bottom,#F4F1F1 30%,#D9D9D9 );
 	border-style: none;
 	border-color: #000000;
-	background-color: #292929;
 }
 
-#page_position_content
+#u704
 {
-	margin-top: -1px;
+	z-index: 2;
+	width: 379px;
 }
 
 #u213
 {
-	z-index: 2;
+	z-index: 3;
 	width: 291px;
-	margin-left: 45px;
+	margin-bottom: -1px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 52px;
 }
 
 #u333
 {
-	z-index: 4;
+	z-index: 21;
 	width: 300px;
 	min-height: 400px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
 	margin-left: 40px;
-	margin-top: 14px;
+	margin-top: 13px;
 	position: relative;
 }
 
-#menuu488
+#menuu668
 {
 	z-index: 5;
 	width: 380px;
-	position: relative;
 }
 
-#u517
+#u697
 {
 	width: 125px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 }
 
-#u518
+#u700
 {
 	width: 125px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u518:hover
+#u700:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u521
+#u700:active
+{
+	margin: 0px;
+}
+
+#u701
 {
 	height: 20px;
 	width: 61px;
-	vertical-align: top;
-	background: url("../images/u521.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 33px;
 }
 
-#u518.MuseMenuActive #u521
-{
-	background: url("../images/u521-a.png") no-repeat 0px 0px;
-}
-
-#u489
+#u669
 {
 	width: 125px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 	left: 127px;
 }
 
-#u492
+#u672
 {
 	width: 125px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u492:hover
+#u700.MuseMenuActive,#u672:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u495
+#u672:active
+{
+	margin: 0px;
+}
+
+#u675
 {
 	height: 20px;
 	width: 62px;
-	vertical-align: top;
-	background: url("../images/u495.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 32px;
 }
 
-#u492.MuseMenuActive #u495
-{
-	background: url("../images/u495-a.png") no-repeat 0px 0px;
-}
-
-#u510
+#u676
 {
 	width: 126px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 	left: 254px;
 }
 
-#u513
+#u677
 {
 	width: 126px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u513:hover
+#u672.MuseMenuActive,#u677:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u518:active,#u492:active,#u513:active
+#u677:active
 {
-	background-color: #6B6B6B;
 	margin: 0px;
 }
 
-#u516
+#u677.MuseMenuActive
+{
+	margin: 0px;
+}
+
+#u679
 {
 	height: 20px;
 	width: 86px;
-	vertical-align: top;
-	background: url("../images/u516.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 21px;
-}
-
-#u513.MuseMenuActive #u516
-{
-	background: url("../images/u516-a.png") no-repeat 0px 0px;
-}
-
-.MenuItem /* unifiedNavBar */
-{
-	cursor: pointer;
 }
 
 #page .verticalspacer
