--- a/css/notizie.css
+++ b/css/notizie.css
@@ -33,30 +33,61 @@ html
 	z-index: 1;
 	width: 380px;
 	min-height: 450px;
-	background-image: none;
+	background: #D9D9D9 url("../images/u97-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, color-stop(30%, #F4F1F1),to(#D9D9D9));
+	background: -webkit-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -moz-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -ms-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -o-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: linear-gradient(to bottom,#F4F1F1 30%,#D9D9D9 );
 	border-style: none;
 	border-color: #000000;
-	background-color: #292929;
 }
 
-#page_position_content
+#u704
 {
-	margin-top: -1px;
+	z-index: 2;
+	width: 379px;
 }
 
 #u213
 {
-	z-index: 2;
+	z-index: 3;
 	width: 291px;
-	margin-left: 45px;
+	margin-bottom: -1px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 52px;
+}
+
+#u705
+{
+	z-index: 21;
+	width: 228px;
+	border-style: none;
+	border-color: transparent;
+	background-color: #CECECE;
+	background-color: rgba(0, 0, 0, 0.19);
+	padding-bottom: 7px;
+	margin-left: 82px;
+	margin-top: 17px;
+	position: relative;
+	-pie-background: rgba(0, 0, 0, 0.19);
 }
 
 #menuu223
 {
-	z-index: 4;
+	z-index: 22;
 	width: 227px;
-	margin-left: 77px;
+	border-style: none;
+	border-color: transparent;
+	background-color: #A0A0A0;
+	background-color: rgba(0, 0, 0, 0.37);
 	position: relative;
+	margin-right: -10000px;
+	margin-top: -11px;
+	left: -5px;
+	-pie-background: rgba(0, 0, 0, 0.37);
 }
 
 #u289
@@ -69,7 +100,13 @@ html
 {
 	width: 227px;
 	min-height: 21px;
-	background-color: #C4C4C4;
+	background: #837878 url("../images/u290-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#3A3838),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -moz-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -ms-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -o-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: linear-gradient(to bottom,#3A3838 ,#837878 90%);
 	padding-bottom: 31px;
 	position: relative;
 	margin-right: -10000px;
@@ -77,7 +114,25 @@ html
 
 #u290:hover
 {
-	background-color: #999999;
+	background: #837878 url("../images/u290-r-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#999999),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#999999 ,#837878 90%);
+	background: -moz-linear-gradient(top,#999999 ,#837878 90%);
+	background: -ms-linear-gradient(top,#999999 ,#837878 90%);
+	background: -o-linear-gradient(top,#999999 ,#837878 90%);
+	background: linear-gradient(to bottom,#999999 ,#837878 90%);
+	margin: 0px -10000px 0px 0px;
+}
+
+#u290:active
+{
+	background: #837878 url("../images/u290-m-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#6B6B6B),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -moz-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -ms-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -o-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: linear-gradient(to bottom,#6B6B6B ,#837878 90%);
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -102,7 +157,13 @@ html
 {
 	width: 227px;
 	min-height: 21px;
-	background-color: #C4C4C4;
+	background: #837878 url("../images/u290-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#3A3838),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -moz-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -ms-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -o-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: linear-gradient(to bottom,#3A3838 ,#837878 90%);
 	padding-bottom: 31px;
 	position: relative;
 	margin-right: -10000px;
@@ -110,7 +171,25 @@ html
 
 #u327:hover
 {
-	background-color: #999999;
+	background: #837878 url("../images/u290-r-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#999999),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#999999 ,#837878 90%);
+	background: -moz-linear-gradient(top,#999999 ,#837878 90%);
+	background: -ms-linear-gradient(top,#999999 ,#837878 90%);
+	background: -o-linear-gradient(top,#999999 ,#837878 90%);
+	background: linear-gradient(to bottom,#999999 ,#837878 90%);
+	margin: 0px -10000px 0px 0px;
+}
+
+#u327:active
+{
+	background: #837878 url("../images/u290-m-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#6B6B6B),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -moz-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -ms-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -o-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: linear-gradient(to bottom,#6B6B6B ,#837878 90%);
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -135,7 +214,13 @@ html
 {
 	width: 227px;
 	min-height: 21px;
-	background-color: #C4C4C4;
+	background: #837878 url("../images/u320-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#3A3838),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -moz-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -ms-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -o-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: linear-gradient(to bottom,#3A3838 ,#837878 90%);
 	padding-bottom: 32px;
 	position: relative;
 	margin-right: -10000px;
@@ -143,7 +228,25 @@ html
 
 #u320:hover
 {
-	background-color: #999999;
+	background: #837878 url("../images/u320-r-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#999999),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#999999 ,#837878 90%);
+	background: -moz-linear-gradient(top,#999999 ,#837878 90%);
+	background: -ms-linear-gradient(top,#999999 ,#837878 90%);
+	background: -o-linear-gradient(top,#999999 ,#837878 90%);
+	background: linear-gradient(to bottom,#999999 ,#837878 90%);
+	margin: 0px -10000px 0px 0px;
+}
+
+#u320:active
+{
+	background: #837878 url("../images/u320-m-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#6B6B6B),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -moz-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -ms-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -o-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: linear-gradient(to bottom,#6B6B6B ,#837878 90%);
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -168,7 +271,13 @@ html
 {
 	width: 227px;
 	min-height: 21px;
-	background-color: #C4C4C4;
+	background: #837878 url("../images/u320-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#3A3838),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -moz-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -ms-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -o-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: linear-gradient(to bottom,#3A3838 ,#837878 90%);
 	padding-bottom: 32px;
 	position: relative;
 	margin-right: -10000px;
@@ -176,7 +285,25 @@ html
 
 #u313:hover
 {
-	background-color: #999999;
+	background: #837878 url("../images/u320-r-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#999999),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#999999 ,#837878 90%);
+	background: -moz-linear-gradient(top,#999999 ,#837878 90%);
+	background: -ms-linear-gradient(top,#999999 ,#837878 90%);
+	background: -o-linear-gradient(top,#999999 ,#837878 90%);
+	background: linear-gradient(to bottom,#999999 ,#837878 90%);
+	margin: 0px -10000px 0px 0px;
+}
+
+#u313:active
+{
+	background: #837878 url("../images/u320-m-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#6B6B6B),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -moz-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -ms-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -o-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: linear-gradient(to bottom,#6B6B6B ,#837878 90%);
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -201,7 +328,13 @@ html
 {
 	width: 227px;
 	min-height: 21px;
-	background-color: #C4C4C4;
+	background: #837878 url("../images/u320-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#3A3838),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -moz-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -ms-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -o-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: linear-gradient(to bottom,#3A3838 ,#837878 90%);
 	padding-bottom: 32px;
 	position: relative;
 	margin-right: -10000px;
@@ -209,7 +342,25 @@ html
 
 #u306:hover
 {
-	background-color: #999999;
+	background: #837878 url("../images/u320-r-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#999999),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#999999 ,#837878 90%);
+	background: -moz-linear-gradient(top,#999999 ,#837878 90%);
+	background: -ms-linear-gradient(top,#999999 ,#837878 90%);
+	background: -o-linear-gradient(top,#999999 ,#837878 90%);
+	background: linear-gradient(to bottom,#999999 ,#837878 90%);
+	margin: 0px -10000px 0px 0px;
+}
+
+#u306:active
+{
+	background: #837878 url("../images/u320-m-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#6B6B6B),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -moz-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -ms-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -o-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: linear-gradient(to bottom,#6B6B6B ,#837878 90%);
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -241,7 +392,13 @@ html
 {
 	width: 227px;
 	min-height: 21px;
-	background-color: #C4C4C4;
+	background: #837878 url("../images/u320-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#3A3838),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -moz-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -ms-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: -o-linear-gradient(top,#3A3838 ,#837878 90%);
+	background: linear-gradient(to bottom,#3A3838 ,#837878 90%);
 	padding-bottom: 32px;
 	position: relative;
 	margin-right: -10000px;
@@ -249,13 +406,25 @@ html
 
 #u299:hover
 {
-	background-color: #999999;
+	background: #837878 url("../images/u320-r-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#999999),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#999999 ,#837878 90%);
+	background: -moz-linear-gradient(top,#999999 ,#837878 90%);
+	background: -ms-linear-gradient(top,#999999 ,#837878 90%);
+	background: -o-linear-gradient(top,#999999 ,#837878 90%);
+	background: linear-gradient(to bottom,#999999 ,#837878 90%);
 	margin: 0px -10000px 0px 0px;
 }
 
-#u290:active,#u327:active,#u320:active,#u313:active,#u306:active,#u299:active
+#u299:active
 {
-	background-color: #6B6B6B;
+	background: #837878 url("../images/u320-m-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, from(#6B6B6B),color-stop(90%, #837878));
+	background: -webkit-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -moz-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -ms-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: -o-linear-gradient(top,#6B6B6B ,#837878 90%);
+	background: linear-gradient(to bottom,#6B6B6B ,#837878 90%);
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -281,134 +450,113 @@ html
 	cursor: pointer;
 }
 
-#menuu380
+#menuu668
 {
-	z-index: 35;
+	z-index: 5;
 	width: 380px;
-	position: relative;
 }
 
-#u409
+#u697
 {
 	width: 125px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 }
 
-#u410
+#u700
 {
 	width: 125px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u410:hover
+#u700:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u413
+#u700:active
+{
+	margin: 0px;
+}
+
+#u701
 {
 	height: 20px;
 	width: 61px;
-	vertical-align: top;
-	background: url("../images/u413.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 33px;
 }
 
-#u410.MuseMenuActive #u413
-{
-	background: url("../images/u413-a.png") no-repeat 0px 0px;
-}
-
-#u381
+#u669
 {
 	width: 125px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 	left: 127px;
 }
 
-#u384
+#u672
 {
 	width: 125px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u387-4
+#u700.MuseMenuActive,#u672:hover
 {
-	position: relative;
+	margin: 0px;
+}
+
+#u672:active
+{
+	margin: 0px;
+}
+
+#u675
+{
+	height: 20px;
+	width: 62px;
 	margin-right: -10000px;
 	top: 23px;
 	left: 32px;
 }
 
-#u387-4_clip
-{
-	overflow: hidden;
-	width: 62px;
-	height: 20px;
-	vertical-align: top;
-}
-
-#u387-4_img
-{
-	display: block;
-}
-
-#u402
+#u676
 {
 	width: 126px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 	left: 254px;
 }
 
-#u405
+#u677
 {
 	width: 126px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u384.MuseMenuActive,#u405:hover
+#u672.MuseMenuActive,#u677:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u410:active,#u405:active
+#u677:active
 {
-	background-color: #6B6B6B;
 	margin: 0px;
 }
 
-#u408
+#u677.MuseMenuActive
+{
+	margin: 0px;
+}
+
+#u679
 {
 	height: 20px;
 	width: 86px;
-	vertical-align: top;
-	background: url("../images/u408.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 21px;
-}
-
-#u405.MuseMenuActive #u408
-{
-	background: url("../images/u408-a.png") no-repeat 0px 0px;
 }
 
 #page .verticalspacer
