--- a/css/redazionali.css
+++ b/css/redazionali.css
@@ -33,172 +33,153 @@ html
 	z-index: 1;
 	width: 380px;
 	min-height: 450px;
-	background-image: none;
+	background: #D9D9D9 url("../images/u195-grad.png") repeat-x left top;
+	background: -webkit-gradient(linear, center top, center bottom, color-stop(30%, #F4F1F1),to(#D9D9D9));
+	background: -webkit-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -moz-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -ms-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: -o-linear-gradient(top,#F4F1F1 30%,#D9D9D9 );
+	background: linear-gradient(to bottom,#F4F1F1 30%,#D9D9D9 );
 	border-style: none;
 	border-color: #000000;
-	background-color: #292929;
 }
 
-#page_position_content
+#u704
 {
-	margin-top: -1px;
+	z-index: 2;
+	width: 379px;
 }
 
 #u213
 {
-	z-index: 2;
+	z-index: 3;
 	width: 291px;
-	margin-left: 45px;
+	margin-bottom: -1px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 52px;
 }
 
 #u337
 {
-	z-index: 4;
+	z-index: 21;
 	width: 300px;
 	min-height: 400px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
 	margin-left: 40px;
-	margin-top: 14px;
+	margin-top: 13px;
 	position: relative;
 }
 
-#menuu560
+#menuu668
 {
 	z-index: 5;
 	width: 380px;
-	position: relative;
 }
 
-#u589
+#u697
 {
 	width: 125px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 }
 
-#u590
+#u700
 {
 	width: 125px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u590:hover
+#u700:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u593
+#u700:active
+{
+	margin: 0px;
+}
+
+#u701
 {
 	height: 20px;
 	width: 61px;
-	vertical-align: top;
-	background: url("../images/u593.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 33px;
 }
 
-#u590.MuseMenuActive #u593
-{
-	background: url("../images/u593-a.png") no-repeat 0px 0px;
-}
-
-#u561
+#u669
 {
 	width: 125px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 	left: 127px;
 }
 
-#u564
+#u672
 {
 	width: 125px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u564:hover
+#u700.MuseMenuActive,#u672:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u567
+#u672:active
+{
+	margin: 0px;
+}
+
+#u675
 {
 	height: 20px;
 	width: 62px;
-	vertical-align: top;
-	background: url("../images/u567.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 32px;
 }
 
-#u564.MuseMenuActive #u567
-{
-	background: url("../images/u567-a.png") no-repeat 0px 0px;
-}
-
-#u582
+#u676
 {
 	width: 126px;
 	min-height: 71px;
-	position: relative;
 	margin-right: -10000px;
 	left: 254px;
 }
 
-#u585
+#u677
 {
 	width: 126px;
-	background-color: #C4C4C4;
 	padding-bottom: 51px;
-	position: relative;
 }
 
-#u585:hover
+#u672.MuseMenuActive,#u677:hover
 {
-	background-color: #999999;
 	margin: 0px;
 }
 
-#u590:active,#u564:active,#u585:active
+#u677:active
 {
-	background-color: #6B6B6B;
 	margin: 0px;
 }
 
-#u588
+#u677.MuseMenuActive
+{
+	margin: 0px;
+}
+
+#u679
 {
 	height: 20px;
 	width: 86px;
-	vertical-align: top;
-	background: url("../images/u588.png") no-repeat 0px 0px;
-	position: relative;
 	margin-right: -10000px;
 	top: 23px;
 	left: 21px;
-}
-
-#u585.MuseMenuActive #u588
-{
-	background: url("../images/u588-a.png") no-repeat 0px 0px;
-}
-
-.MenuItem /* unifiedNavBar */
-{
-	cursor: pointer;
 }
 
 #page .verticalspacer
